logs/app.log
[2026-01-02T13:04:55.623Z] Server started on port 8000
[2026-01-02T13:05:12.014Z] TASK_START
[2026-01-02T13:05:12.015Z] DIRECTION_START UP
[2026-01-02T13:05:12.015Z] DATE_PROCESS_START UP 2026-01-02
[2026-01-02T13:05:12.918Z] ROUTE_NOT_FOUND UP 2026-01-02
[2026-01-02T13:05:12.919Z] DATE_PROCESS_START UP 2026-01-03
[2026-01-02T13:05:13.358Z] ROUTE_FOUND UP 2026-01-03
[2026-01-02T13:05:13.845Z] SEAT_DATA_FETCHED UP 2026-01-03
[2026-01-02T13:05:13.851Z] HTML_GENERATED UP 2026-01-03
[2026-01-02T13:05:13.853Z] DATE_PROCESS_START UP 2026-01-04
[2026-01-02T13:05:14.285Z] ROUTE_FOUND UP 2026-01-04
[2026-01-02T13:05:14.849Z] SEAT_DATA_FETCHED UP 2026-01-04
[2026-01-02T13:05:14.852Z] HTML_GENERATED UP 2026-01-04
[2026-01-02T13:05:14.853Z] PDF_GENERATION_START UP
[2026-01-02T13:05:19.522Z] PDF_GENERATION_SUCCESS UP
[2026-01-02T13:05:24.067Z] [object Object]
[2026-01-02T13:05:24.068Z] MAIL_SENT_SUCCESS UP
[2026-01-02T13:05:24.070Z] DIRECTION_START DOWN
[2026-01-02T13:05:24.071Z] DATE_PROCESS_START DOWN 2026-01-02
[2026-01-02T13:05:24.964Z] ROUTE_FOUND DOWN 2026-01-02
[2026-01-02T13:05:25.395Z] SEAT_DATA_FETCHED DOWN 2026-01-02
[2026-01-02T13:05:25.399Z] ERROR DATE_PROCESS_FAILED DOWN 2026-01-02
[2026-01-02T13:05:25.400Z] DATE_PROCESS_START DOWN 2026-01-03
[2026-01-02T13:05:25.874Z] ROUTE_FOUND DOWN 2026-01-03
[2026-01-02T13:05:26.622Z] SEAT_DATA_FETCHED DOWN 2026-01-03
[2026-01-02T13:05:26.625Z] HTML_GENERATED DOWN 2026-01-03
[2026-01-02T13:05:26.625Z] DATE_PROCESS_START DOWN 2026-01-04
[2026-01-02T13:05:27.059Z] ROUTE_FOUND DOWN 2026-01-04
[2026-01-02T13:05:27.645Z] SEAT_DATA_FETCHED DOWN 2026-01-04
[2026-01-02T13:05:27.647Z] HTML_GENERATED DOWN 2026-01-04
[2026-01-02T13:05:27.648Z] PDF_GENERATION_START DOWN
[2026-01-02T13:05:31.523Z] PDF_GENERATION_SUCCESS DOWN
[2026-01-02T13:05:36.214Z] [object Object]
[2026-01-02T13:05:36.217Z] MAIL_SENT_SUCCESS DOWN
[2026-01-02T13:05:36.219Z] TASK_END
[2026-01-02T13:05:45.739Z] Server started on port 8000
[2026-01-02T13:05:49.545Z] TASK_START
[2026-01-02T13:05:49.546Z] DIRECTION_START UP
[2026-01-02T13:05:49.547Z] DATE_PROCESS_START UP 2026-01-02
[2026-01-02T13:05:51.416Z] ROUTE_NOT_FOUND UP 2026-01-02
[2026-01-02T13:05:51.416Z] DATE_PROCESS_START UP 2026-01-03
[2026-01-02T13:05:51.882Z] ROUTE_FOUND UP 2026-01-03
[2026-01-02T13:05:52.323Z] SEAT_DATA_FETCHED UP 2026-01-03
[2026-01-02T13:05:52.329Z] HTML_GENERATED UP 2026-01-03
[2026-01-02T13:05:52.330Z] DATE_PROCESS_START UP 2026-01-04
[2026-01-02T13:05:53.043Z] ROUTE_FOUND UP 2026-01-04
[2026-01-02T13:05:53.655Z] SEAT_DATA_FETCHED UP 2026-01-04
[2026-01-02T13:05:53.659Z] HTML_GENERATED UP 2026-01-04
[2026-01-02T13:05:53.660Z] PDF_GENERATION_START UP
[2026-01-02T13:05:57.601Z] PDF_GENERATION_SUCCESS UP
[2026-01-02T13:06:02.764Z] [object Object]
[2026-01-02T13:06:02.766Z] MAIL_SENT_SUCCESS UP
[2026-01-02T13:06:02.767Z] DIRECTION_START DOWN
[2026-01-02T13:06:02.767Z] DATE_PROCESS_START DOWN 2026-01-02
[2026-01-02T13:06:03.403Z] ROUTE_FOUND DOWN 2026-01-02
[2026-01-02T13:06:04.772Z] SEAT_DATA_FETCHED DOWN 2026-01-02
[2026-01-02T13:06:04.776Z] ERROR DATE_PROCESS_FAILED DOWN 2026-01-02
[2026-01-02T13:06:04.777Z] DATE_PROCESS_START DOWN 2026-01-03
[2026-01-02T13:06:05.301Z] ROUTE_FOUND DOWN 2026-01-03
[2026-01-02T13:06:05.858Z] SEAT_DATA_FETCHED DOWN 2026-01-03
[2026-01-02T13:06:05.861Z] HTML_GENERATED DOWN 2026-01-03
[2026-01-02T13:06:05.862Z] DATE_PROCESS_START DOWN 2026-01-04
[2026-01-02T13:06:06.306Z] ROUTE_FOUND DOWN 2026-01-04
[2026-01-02T13:06:06.896Z] SEAT_DATA_FETCHED DOWN 2026-01-04
[2026-01-02T13:06:06.899Z] HTML_GENERATED DOWN 2026-01-04
[2026-01-02T13:06:06.900Z] PDF_GENERATION_START DOWN
[2026-01-02T13:06:10.872Z] PDF_GENERATION_SUCCESS DOWN
[2026-01-02T13:06:15.080Z] [object Object]
[2026-01-02T13:06:15.080Z] MAIL_SENT_SUCCESS DOWN
[2026-01-02T13:06:15.081Z] TASK_END
[2026-01-02T13:07:10.209Z] Server started on port 8000
[2026-01-02T13:07:15.731Z] Server started on port 8000
[2026-01-02T13:07:33.420Z] ERROR /app/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
[2026-01-02T13:07:33.426Z] ERROR TSError: тип Unable to compile TypeScript:
src/scheduler/execute.ts(133,56): error TS18046: 'err' is of type 'unknown'.

    at createTSError (/app/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/app/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/app/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/app/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/app/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (/app/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19) {
  diagnosticCodes: [ 18046 ]
}
[2026-01-02T13:07:39.850Z] ERROR /app/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
[2026-01-02T13:07:39.856Z] ERROR TSError: тип Unable to compile TypeScript:
src/scheduler/execute.ts(133,56): error TS1109: Expression expected.

    at createTSError (/app/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/app/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/app/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/app/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/app/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (/app/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19) {
  diagnosticCodes: [ 1109 ]
}
